pin the mermaid version to 8.14.0, add subresource integrity

--- a/mermaid-render.html
+++ b/mermaid-render.html
@@ -6,7 +6,7 @@
 
     <script src="lib/VSS.SDK.min.js"></script>
     <script src="scripts/render.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@8.14.0/dist/mermaid.min.js" integrity="sha256-7wT34TI0pEBeEFoi4z+vhuSddGh6vUTMWdqJ2SDe2jg=" crossorigin="anonymous"></script>
     <script>mermaid.initialize({startOnLoad:false});</script>
 </head>
 <body style="overflow-y: scroll;overflow-x: scroll;">
